--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
-    "mint-ui": "^0.2.8",
+    "node-sqlserver": "",
+    "element-ui": "",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "nightwatch": "^0.9.3",
